  member. For example:

  // Slice
  const int MIN = 1;

  struct Info
  {
      int size = MIN;
  };

  It is also possible for a constant to refer to another constant:

  // Slice
  const int MAXIMUM_SIZE = 100;
  const int DEFAULT_SIZE = MAXIMUM_SIZE;


Python Changes
==============

- Fixed bug where None was not recognized as a keyword.


Java Changes
============

- Fixed a bug in slice2java in which a floating point default value
  could cause a compile error.

- Fixed a bug where Ice.ServerIdleTime wouldn't consistently shutdown
  servers after the given period of inactivity.


Ruby Changes
============

- Fixed a bug in the Ice extension that would cause an ArgumentError
  to be raised when attempting to print a byte sequence whose value is
  a string that contains null bytes.


======================================================================
Changes since version 3.4.0
======================================================================


General Changes
===============

- Added the new property Freeze.DbEnv.<db>.LockFile and changed the
  dumpdb and transformdb utilities so that they can be run safely on
  a database environment that is currently open in another process.

- Changed the Glacier2 helper classes to cache the client category.

- Added the ability to use underscores in Slice identifiers. See the
  release notes for important information on this change.

- Added the setConnectContext method to Glacier2.SessionFactoryHelper,
  which allows an application to provide a request context to be used
  when creating a Glacier2 session. (Java and C#)

- Fixed IceGrid bug where node observers would not be notified when a
  server is re-enabled after it has been updated and if the server was
  disabled following an activation failure.

- Fixed a bug in the Glacier2.SessionFactoryHelper class (Java/C#) in
  which the getPort() method would return an incorrect default port if
  no port was configured.


C++ Changes
===========
