@@ -67,11 +67,19 @@ Python Changes
 Java Changes
 ============
 
+- Added an ice_staticId method to generated PrxHelper classes.
+
 - Fixed a bug in slice2java in which a floating point default value
   could cause a compile error.
 
 - Fixed a bug where Ice.ServerIdleTime wouldn't consistently shutdown
   servers after the given period of inactivity.
+
+
+C# Changes
+==========
+
+- Added an ice_staticId method to generated PrxHelper classes.
 
 
 Ruby Changes
